2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: erase_to_last_of() is not a ltrim()

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	Dave Jones suggested this change.

	* module/x86/op_model_p4.c: remove superflous ';' at end of some macro

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h: remove erase_from_last_of()
	* libutil++/string_manip.cpp: and tidy erase_to_last_of(), rtrim() and
	  ltrim()

2003-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h:
	* libpp/profile_container.cpp: remove nil_symbol_index

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove "base_vma" parameter
	to add_samples(), we can just re-grab it straight from
	the abfd

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove unused "zero samples"
	optimization hint: it's always false

	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: from above

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: small trivialities

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: minor fix/improvments
	* libregex/mangled-name.txt: add tests

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: fix thinko when --merge=lib

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: s/count_groups_summary/summary_container/g

2003-08-12  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document opreport's side-by-side a little
	bit

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: s/group_summary/app_summary/, and
	a lot of other renamings to clarify the count groups
	usage.

2003-08-12  John Levon  <levon@movementarian.org>

	* utils/op_help.c: add --unit-mask

	* utils/opcontrol: use --unit-mask

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
